[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netlanventory"
version = "0.1.0"
description = "Modular network scanning and inventory tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NetLanVentory Contributors" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Configuration
    "pydantic-settings>=2.6.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    # CLI
    "click>=8.1.8",
    "rich>=13.9.4",
    # Networking / scanning
    "scapy>=2.6.1",
    "python-nmap>=0.7.1",
    # Authentication
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    # Logging
    "structlog>=24.4.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Async utilities
    "anyio>=4.6.0",
    "httpx>=0.28.0",
    # SSH connectivity (SSH CVE scan)
    "asyncssh>=2.14.0",
    # Symmetric encryption (SSH credential storage)
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
netlv = "netlanventory.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["netlanventory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
